// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BTCAmountChar should render correctly 1`] = `
<Text
  allowFontScaling={false}
  style={
    [
      {
        "color": "#2B1911",
        "fontFamily": "Baloo2-Regular",
        "fontSize": 16,
        "letterSpacing": 0.16,
        "lineHeight": 24,
      },
      [
        [],
        {
          "color": "#2B1911",
          "letterSpacing": 0,
        },
      ],
      false,
    ]
  }
>
  1
</Text>
`;

exports[`BTCAmountChar should render correctly when white 1`] = `
<Text
  allowFontScaling={false}
  style={
    [
      {
        "color": "#2B1911",
        "fontFamily": "Baloo2-Regular",
        "fontSize": 16,
        "letterSpacing": 0.16,
        "lineHeight": 24,
      },
      [
        [],
        {
          "color": "#FFFCFA",
          "letterSpacing": 0,
        },
      ],
      false,
    ]
  }
>
  1
</Text>
`;

exports[`BTCAmountChar should render correctly with reduceOpacity 1`] = `
<Text
  allowFontScaling={false}
  style={
    [
      {
        "color": "#2B1911",
        "fontFamily": "Baloo2-Regular",
        "fontSize": 16,
        "letterSpacing": 0.16,
        "lineHeight": 24,
      },
      [
        [],
        {
          "color": "#2B19111A",
          "letterSpacing": 0,
        },
      ],
      false,
    ]
  }
>
  1
</Text>
`;

exports[`BTCAmountChar should render correctly with reduceOpacity and white 1`] = `
<Text
  allowFontScaling={false}
  style={
    [
      {
        "color": "#2B1911",
        "fontFamily": "Baloo2-Regular",
        "fontSize": 16,
        "letterSpacing": 0.16,
        "lineHeight": 24,
      },
      [
        [],
        {
          "color": "#FFFCFA1A",
          "letterSpacing": 0,
        },
      ],
      false,
    ]
  }
>
  1
</Text>
`;
